--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -94,4 +94,25 @@
       </div>
     </div>
   </div>
+
+  <% if student_logged_in? %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#CreditCollapse"><span class="glyphicon glyphicon-user"></span>
+              学分统计</a>
+      </h4>
+    </div>
+
+    <div id="CreditCollapse" class="panel-collapse collapse <%= "in" if ["credit"].include?(params[:controller]) %>">
+      <div class="list-group">
+            <li class="list-group-item"> 
+              <%= link_to credit_path do %>
+                  <span class="glyphicon glyphicon-chevron-right"></span> 学分清查
+              <% end %>
+            </li>
+      </div>
+    </div>
+  </div>
+  <% end %>
 </div>
