--- a/app/views/credit/index.html.erb
+++ b/app/views/credit/index.html.erb
@@ -7,7 +7,7 @@
     <div class="col-sm-10">
       <div class="panel panel-primary">
         <div class="panel-heading">
-          <% if student_logged_in? %><h3 class="panel-title">学分清查</h3><% end %>
+          <h3 class="panel-title">学分清查</h3>
         </div>
         <div class="panel-body" style="min-height: 450px">
           <table class="table table-striped table-hover">
@@ -15,9 +15,12 @@
 
             <tr>
               <th>类别</th>
-              <th>公共必修课程及学分</th>
-              <th>公共选修课程及学分</th>
-              <th>专业学位课学分要求</th>
+              <th>公共选修课</th>
+              <th>一级学科普及课</th>
+              <th>一级学科核心课</th>
+              <th>专业普及课</th>
+              <th>专业核心课</th>
+              <th>专业研讨课</th>
               <th>总学分要求</th>
 
             </tr>
@@ -25,28 +28,34 @@
             <tbody>
                 <tr>
                     <td>学习要求</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>6</td>
+                    <td>>=4</td>
+                    <td>6</td>
+                    <td>16</td>
+                    <td>>=12</td>
+                    <td>>=5</td>
+                    <td>>=49</td>
                 </tr>
                 <tr>
                     <td>选课情况</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td><%= @credit_pub %></td>
+                    <td><%= @credit_fpub %></td>
+                    <td><%= @credit_fhea %></td>
+                    <td><%= @credit_prpub %></td>
+                    <td><%= @credit_prhea %></td>
+                    <td><%= @credit_prdis %></td>
+                    <td><%= @credit_all %></td>
                 </tr>
                 <tr>
                     <td>获取学分</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td><%= @credit_get_pub %></td>
+                    <td><%= @credit_get_fpub %></td>
+                    <td><%= @credit_get_fhea %></td>
+                    <td><%= @credit_get_prpub %></td>
+                    <td><%= @credit_get_prhea %></td>
+                    <td><%= @credit_get_prdis %></td>
+                    <td><%= @credit_get_all %></td>
                 </tr>
-                
-                
-            
             </tbody>
           </table>
         </div>
