--- a/app/views/schedule/index.html.erb
+++ b/app/views/schedule/index.html.erb
@@ -3,8 +3,7 @@
     <div class="col-sm-10">
       <div class="panel panel-primary filterable">
         <div class="panel-heading">
-          <% if student_logged_in? %><h3 class="panel-title">本人课表</h3>
-          <% end %>
+          <h3 class="panel-title">本人课表</h3>
         </div>
 
         <div class="panel-body">
